--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
 	<div class="wrapper">
+		<div id="burgerContent" class="burger__content trans">
+			<ul>
+				<li class="burger__content_item"><a href="#">Home</a></li>
+				<li class="burger__content_item"><a href="#">About Us</a></li>
+				<li class="burger__content_item"><a href="#">Services</a></li>
+				<li class="burger__content_item"><a href="#">Pages</a></li>
+				<li class="burger__content_item"><a href="#">Contact Us</a></li>
+			</ul>
+		</div>
 			<header class="header">
 				<div class="content">
 					<div class="header__item">
@@ -24,15 +33,21 @@
 								<li class="header__list_item"><a href="#" class="header__list_link">Contact Us</a></li>
 							</ul>
 						</nav>
-						<div class="header__burger">burger</div>					
-					</div>
-					
-			
-					
+						<div id="burgerBtn" class="header__burger"><span></span></div>	
+					</div>		
 				</div>
 			</header>
 			<main>
-				43543
+				<section class="interior">
+					<div class="content">
+						<div class="interior__text">
+						<h1>Let's Create Your Dream Interior</h1>
+						<p class="interior__text_p">The world needs innovators and problem solvers who turn</p>
+						<p class="interior__text_p">challenges into greater opportunities.</p>
+						<a class="interior__text_btn" href="#">Get Started<span></span></a>
+					</div>
+					</div>
+				</section>
 			</main>
 			<footer>
 				545
@@ -42,5 +57,6 @@
 
 
 	</div>
+	<script src="/js/main.js"></script>
 </body>
 </html>
