--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 					</div>
 					</div>
 				</section>
+				<section class="disign_elements">
+					<div class="content">
+						<div class="disign_elements__"></div>
+						
+					</div>
+				</section>
 			</main>
 			<footer>
 				545
@@ -57,6 +63,6 @@
 
 
 	</div>
-	<script src="/js/main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
