--- a/index.html
+++ b/index.html
@@ -50,7 +50,23 @@
 				</section>
 				<section class="disign_elements">
 					<div class="content">
-						<div class="disign_elements__"></div>
+						<div class="disign_elements__wrapper">
+							<div class="disign_elements__item">
+								<h2>Interior Design</h2>
+								<p class="disign_elements_p">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
+								<a class="disign_elements_btn" href="#">View More</a>
+							</div>
+							<div class="disign_elements__item">
+								<h2>Furniture</h2>
+								<p class="disign_elements_p">Movable articles that are used to make a room or building suitable for living or working.</p>
+								<a class="disign_elements_btn" href="#">View More</a>
+							</div>
+							<div class="disign_elements__item">
+								<h2>Flooring</h2>
+								<p class="disign_elements_p">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
+								<a class="disign_elements_btn" href="#">View More</a>
+							</div>		
+						</div>
 						
 					</div>
 				</section>
