--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
 								<a class="disign_elements_btn" href="#">View More</a>
 							</div>		
 						</div>
-						
 					</div>
+				</section>
+				<section class="our_works content">
+			
+						<div class="our_works__text">1</div>
+						<div class="our_works__img">2</div>				
+									</div>
 				</section>
 			</main>
 			<footer>
