--- a/index.html
+++ b/index.html
@@ -71,8 +71,23 @@
 				</section>
 				<section class="our_works content">
 			
-						<div class="our_works__text">1</div>
-						<div class="our_works__img">2</div>				
+						<div class="our_works__text">
+							<h3>We Tackle The Most Challenging Designs</h3>
+							<p class="our_works_p">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have</p>
+							<p class="our_works_p">an insatiable curiosity about transformative trends challenging the status.</p>
+							<div class="our_works_tel">
+								<a href="#" class="our_works_tel_ico"></a>
+								<div class="our_works_tel_text">
+									<p>012345678</p>
+									<p>Call Us Anytime</p>
+								</div>
+							</div>
+							<a class="our_works_btn" href="#">Get Free Estimate</a>
+						</div>
+
+						<div class="our_works__img">
+							<img src="img/our_works.jpg" alt="our_works">
+						</div>				
 									</div>
 				</section>
 			</main>
