--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 						</div>
 
 						<div class="our_works__img">
+							<div class="our_works_title">We Tackle The Most Challenging Designs</div>
 							<img src="img/our_works.jpg" alt="our_works">
 						</div>				
 									</div>
