--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
 						</div>
 	</div>	
 	<div class="part__pages">
-		<div class="pages ">
-			<div id="pages" class="pages__title">Pages</div>
-			<div id="pagesList" class="pages__list hgt">
+		<div id="pages"  class="pages hgt">
+			<div class="pages__title">Pages</div>
+			<div class="pages__list ">
 				<ul>
 					<li>Style Guide</li>
 					<li>Protected</li>
@@ -419,9 +419,9 @@
 
 					<div class="footer__part">
 
-					<div class="footer__list_explore">
+					<div class="footer__list_explore hgt">
 						<div class="pages__title">Explore</div>
-						<div class="pages__list hgt">
+						<div class="pages__list">
 							<ul>
 								<li>About Us</li>
 								<li>Recent Blog</li>
@@ -433,9 +433,9 @@
 					</div>
 
 
-					<div class="footer__list_contact">
+					<div class="footer__list_contact hgt">
 						<div class="pages__title">Contact</div>
-			<div class="pages__list contact__list hgt">
+			<div class="pages__list contact__list">
 				<ul>
 					<li>53, East Birchwood Ave. Brooklyn, New York 11201, USA.</li>
 					<li>contact@interno.com</li>
