--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
 						<div class="footer__left_p">We are the leading architect and interior design firm in the world.</div>
 						<div class="footer__social_networks">
 							<img src="img/facebook.svg" alt="facebook">
-							<img src="/img/tw.svg" alt="tw">
-							<img src="/img/in.svg" alt="in">
-							<img src="/img/inst.svg" alt="inst">
+							<img src="img/tw.svg" alt="tw">
+							<img src="img/in.svg" alt="in">
+							<img src="img/inst.svg" alt="inst">
 						</div>
 	</div>	
 	<div class="part__pages">
