--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 					<div class="footer__part">
 		<div class="part__logo">
 						<div class="footer__left_logo">
-							<img src="/img/header__logo.svg" alt="logo_company">
+							<img src="img/header__logo.svg" alt="logo_company">
 						</div>
 						<div class="footer__left_p">We are the leading architect and interior design firm in the world.</div>
 						<div class="footer__social_networks">
