--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 						</div>
 	</div>	
 	<div class="part__pages">
-		<div id="pages"  class="pages hgt">
+		<div class="pages ">
 			<div class="pages__title">Pages</div>
 			<div class="pages__list ">
 				<ul>
@@ -419,7 +419,7 @@
 
 					<div class="footer__part">
 
-					<div class="footer__list_explore hgt">
+					<div class="footer__list_explore ">
 						<div class="pages__title">Explore</div>
 						<div class="pages__list">
 							<ul>
@@ -433,7 +433,7 @@
 					</div>
 
 
-					<div class="footer__list_contact hgt">
+					<div class="footer__list_contact">
 						<div class="pages__title">Contact</div>
 			<div class="pages__list contact__list">
 				<ul>
