--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<header class="header">
 				<div id="burgerContent" class="burger__content trans">
 					<ul>
-						<li class="burger__content_item"><a href="#">Home</a></li>
-						<li class="burger__content_item"><a href="#">About Us</a></li>
+						<li class="burger__content_item"><a href="#start">Home</a></li>
+						<li class="burger__content_item"><a href="#ct">About Us</a></li>
 						<li class="burger__content_item"><a href="#">Services</a></li>
 						<li class="burger__content_item"><a href="#">Pages</a></li>
 						<li class="burger__content_item"><a href="#">Contact Us</a></li>
@@ -27,8 +27,8 @@
 						</div>
 						<nav class="header__list">
 							<ul>
-								<li class="header__list_item"><a href="#" class="header__list_link active">Home</a></li>
-								<li class="header__list_item"><a href="#" class="header__list_link">About Us</a></li>
+								<li class="header__list_item"><a href="index.html" class="header__list_link active">Home</a></li>
+								<li class="header__list_item"><a href="#ct" class="header__list_link">About Us</a></li>
 								<li class="header__list_item"><a href="#" class="header__list_link">Services</a></li>
 								<li class="header__list_item"><a href="#" class="header__list_link">Pages</a></li>
 								<li class="header__list_item"><a href="#" class="header__list_link">Contact Us</a></li>
@@ -39,7 +39,7 @@
 				</div>
 			</header>
 			<main>
-				<section class="interior">
+				<section id="start" class="interior">
 					<div class="content">
 						<div class="interior__text">
 						<h1>Let's Create Your Dream Interior</h1>
@@ -430,7 +430,7 @@
 					</div>
 
 
-					<div class="footer__list_contact">
+					<div id="ct" class="footer__list_contact">
 						<div class="pages__title">Contact</div>
 			<div class="pages__list contact__list">
 				<ul>
