--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 			<header class="header">
 				<div id="burgerContent" class="burger__content trans">
 					<ul>
-						<li class="burger__content_item"><a href="#start">Home</a></li>
-						<li class="burger__content_item"><a href="#ct">About Us</a></li>
+						<li class="burger__content_item"><a href="#">Home</a></li>
+						<li class="burger__content_item"><a href="#aboutBtn">About Us</a></li>
 						<li class="burger__content_item"><a href="#">Services</a></li>
 						<li class="burger__content_item"><a href="#">Pages</a></li>
-						<li class="burger__content_item"><a href="#">Contact Us</a></li>
+						<li class="burger__content_item"><a href="#footerBtn">Contact Us</a></li>
 					</ul>
 				</div>
 				<div class="content">
@@ -27,11 +27,11 @@
 						</div>
 						<nav class="header__list">
 							<ul>
-								<li class="header__list_item"><a href="index.html" class="header__list_link active">Home</a></li>
-								<li class="header__list_item"><a href="#ct" class="header__list_link">About Us</a></li>
+								<li class="header__list_item"><a href="#" class="header__list_link active">Home</a></li>
+								<li class="header__list_item"><a href="#aboutBtn" class="header__list_link">About Us</a></li>
 								<li class="header__list_item"><a href="#" class="header__list_link">Services</a></li>
 								<li class="header__list_item"><a href="#" class="header__list_link">Pages</a></li>
-								<li class="header__list_item"><a href="#" class="header__list_link">Contact Us</a></li>
+								<li class="header__list_item"><a href="#footerBtn" class="header__list_link">Contact Us</a></li>
 							</ul>
 						</nav>
 						<div id="burgerBtn" class="header__burger"><span></span></div>	
@@ -39,7 +39,7 @@
 				</div>
 			</header>
 			<main>
-				<section id="start" class="interior">
+				<section class="interior">
 					<div class="content">
 						<div class="interior__text">
 						<h1>Let's Create Your Dream Interior</h1>
@@ -368,7 +368,7 @@
 						</div>
 					</div>
 				</section>
-				<section>
+				<section id="aboutBtn">
 					<div class="content">
 						<div class="connection">
 							<div class="connection__title">Wanna join the interno?</div>
@@ -378,7 +378,7 @@
 					</div>
 				</section>
 			</main>
-			<footer class="content">
+			<footer id="footerBtn" class="content">
 				<div class="footer">
 					<div class="footer__part">
 		<div class="part__logo">
@@ -430,7 +430,7 @@
 					</div>
 
 
-					<div id="ct" class="footer__list_contact">
+					<div class="footer__list_contact">
 						<div class="pages__title">Contact</div>
 			<div class="pages__list contact__list">
 				<ul>
