--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 					<ul>
 						<li class="burger__content_item"><a href="#">Home</a></li>
 						<li class="burger__content_item"><a href="#aboutBtn">About Us</a></li>
-						<li class="burger__content_item"><a href="#">Services</a></li>
-						<li class="burger__content_item"><a href="#">Pages</a></li>
+						<li class="burger__content_item"><a href="#ourWorksBtn">Services</a></li>
+						<li class="burger__content_item"><a href="#blogBtn">Pages</a></li>
 						<li class="burger__content_item"><a href="#footerBtn">Contact Us</a></li>
 					</ul>
 				</div>
@@ -29,8 +29,8 @@
 							<ul>
 								<li class="header__list_item"><a href="#" class="header__list_link active">Home</a></li>
 								<li class="header__list_item"><a href="#aboutBtn" class="header__list_link">About Us</a></li>
-								<li class="header__list_item"><a href="#" class="header__list_link">Services</a></li>
-								<li class="header__list_item"><a href="#" class="header__list_link">Pages</a></li>
+								<li class="header__list_item"><a href="#ourWorksBtn" class="header__list_link">Services</a></li>
+								<li class="header__list_item"><a href="#blogBtn" class="header__list_link">Pages</a></li>
 								<li class="header__list_item"><a href="#footerBtn" class="header__list_link">Contact Us</a></li>
 							</ul>
 						</nav>
@@ -70,7 +70,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="our_works content">
+				<section id="ourWorksBtn" class="our_works content">
 			
 						<div class="our_works__text">
 							<h3>We Tackle The Most Challenging Designs</h3>
@@ -91,7 +91,7 @@
 						</div>				
 									</div>
 				</section>
-				<section >
+				<section id="aboutBtn">
 					<div class="content">
 						<div class="reviews">
 							<div class="reviews__title">
@@ -270,7 +270,7 @@
 						</div>
 					</div>
 				</section>
-				<section>
+				<section id="blogBtn">
 					<div class="content">
 						<div class="blog">
 							<div class="recent__project_title blog__title">Recent Blogs</div>
@@ -368,7 +368,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="aboutBtn">
+				<section>
 					<div class="content">
 						<div class="connection">
 							<div class="connection__title">Wanna join the interno?</div>
