--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 					</div>
 				</section>
 			</main>
-			<footer id="footerBtn" class="content">
+			<footer class="content">
 				<div class="footer">
 					<div class="footer__part">
 		<div class="part__logo">
@@ -430,7 +430,7 @@
 					</div>
 
 
-					<div class="footer__list_contact">
+					<div id="footerBtn" class="footer__list_contact">
 						<div class="pages__title">Contact</div>
 			<div class="pages__list contact__list">
 				<ul>
